# Eurepus-RL

./: .gitignore  README.md  train.py
RL/: olympus.py  olympus_3D.py  (+3 more)
olympus_control/: CMakelists.txt  package.xml
olympus_control/models/Olympus3/: config.yaml
olympus_control/models/Olympus3/nn/: Olympus.pth  last_Olympus_ep_1000_rew_11.950558.pth  last_Olympus_ep_100_rew_1.2266277.pth  last_Olympus_ep_1050_rew_9.526005.pth  last_Olympus_ep_1100_rew_12.783273.pth  last_Olympus_ep_1150_rew_10.875684.pth  last_Olympus_ep_1200_rew_16.929852.pth  last_Olympus_ep_1250_rew_16.309652.pth  last_Olympus_ep_1300_rew_21.91235.pth  last_Olympus_ep_1350_rew_12.199722.pth  last_Olympus_ep_1400_rew_15.487098.pth  last_Olympus_ep_1450_rew_20.774378.pth  last_Olympus_ep_1500_rew_17.97769.pth  last_Olympus_ep_150_rew_7.181319.pth  last_Olympus_ep_1550_rew_15.149969.pth  last_Olympus_ep_1600_rew_16.218885.pth  last_Olympus_ep_1650_rew_10.843769.pth  last_Olympus_ep_1700_rew_14.350118.pth  last_Olympus_ep_1750_rew_19.447023.pth  last_Olympus_ep_1800_rew_15.035599.pth  last_Olympus_ep_1850_rew_17.540462.pth  last_Olympus_ep_1900_rew_10.909639.pth  last_Olympus_ep_1950_rew_20.967205.pth  last_Olympus_ep_2000_rew_17.60472.pth  last_Olympus_ep_2000_rew__17.60472_.pth  last_Olympus_ep_200_rew_3.3240776.pth  last_Olympus_ep_250_rew_7.8245373.pth  last_Olympus_ep_300_rew_3.6933157.pth  last_Olympus_ep_350_rew_1.2745912.pth  last_Olympus_ep_400_rew_6.519024.pth  (+12 more)
olympus_control/networks/: mlp_network_builder.py
olympus_control/scripts/: rl_controller.py
olympus_control/utils/: utils.py
(+18 files in other folders)
