<?xml version="1.0"?>
<package format="2">
  <name>olympus_control</name>
  <version>0.0.0</version>
  <description>The olympus_control package</description>

  <maintainer email="grzegorz.malczyk@ntnu.no">Grzegorz Malczyk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>cubemars_controller_ros_msgs</depend>
  <depend>std_msgs</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>